--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    height: 100%;
+    width: 100%;
+}
+
+body {
+    background: rgb(220, 119, 195);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .App {
-  text-align: center;
+    background: rgb(255, 255, 255);
+    min-height: 300px;
+    min-width: 200px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.place {
+    text-align: center;
+    padding: 10px 15px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+    list-style: none;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+li {
+    margin-bottom: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+li:hover {
+    cursor: pointer;
+    background: rgb(181, 176, 176);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.active {
+    background: rgb(181, 176, 176);
+}
+button {
+    padding: 2px 4px;
 }
