--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 * {
+    font-size: 24px;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -19,8 +20,8 @@ body {
 
 .App {
     background: rgb(255, 255, 255);
-    min-height: 300px;
-    min-width: 200px;
+    min-height: 400px;
+    min-width: 400px;
 }
 
 .form {
